# little-walk-backend

./: Cargo.toml
src/: main.rs
src/core/: entities.rs  error.rs  repository.rs  service.rs
src/handlers/: auth.rs  mod.rs
src/repositories/: mongodb.rs
